@@ -1,3 +1,8 @@
+2019-11-28  Jerry DeLisle  <jvdelisle@gcc.ngu.org>
+
+	PR fortran/90374
+	* io.c (check_format): Allow zero width expoenent with e0.
+
 2019-11-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR fortran/91944
